[package]
name = "qualys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickxml_to_serde = "0.5.0"
xml-rs = "0.8.4"
get-size = { version = "^0.1", features = ["derive"] }
odbc = "0.17.0"
sprintf = "0.1.2"
colored = "2.0.0"